--- a/MachineLearning/Theory/recommend-system-practice/2-user-action-data/2.4-neighborhood-based-algorithm.md
+++ b/MachineLearning/Theory/recommend-system-practice/2-user-action-data/2.4-neighborhood-based-algorithm.md
@@ -19,6 +19,16 @@
 
 兴趣相似度可通过Jaccard公式或者余弦相似度。
 
+
+* [R语言:计算各种距离 - 求知：数据科学家之路 - CSDN博客 ](http://blog.csdn.net/xxzhangx/article/details/53153821)
+
+
+```r
+a <- 1:4
+b <- 1:4
+sum(a*b)/(sqrt(sum(a^2))*sqrt(sum(b^2)))
+```
+
 ## 2.4.2　基于物品的协同过滤算法
 
 IBCF(item-based collaborative filering)
@@ -38,23 +48,29 @@ IBCF(item-based collaborative filering)
 　　
 求得他们的夹角，并得出夹角对应的余弦值，此余弦值就可以用来表征，这两个向量的相似性。夹角越小，余弦值越接近于1，它们的方向更加吻合，则越相似。
 
+|{a,b,d}||{b,e}|=3*2=6
+|{a,b,d}||{c,d,e}|=3*3=9
+
+
 向量点积公式：
-$cos\theta = \frac{a*b}{||a||||b||}$
+$$
+cos\theta = \frac{a*b}{||a||||b||}
+$$
 
 a,b的坐标为(x1,y1), (x2,y2)
-$cos\theta = \frac{x_1*x_2 + y_1*y_2}
+$$
+cos\theta = \frac{x_1*x_2 + y_1*y_2}
              {\sqrt{x^2_1+y^2_1} \times \sqrt{x^2_2+y^2_2}}
-$
+$$
 
 设向量 A = (A1,A2,...,An)，B = (B1,B2,...,Bn) 。推广到多维:
 
-$cos\theta = \frac{\sum_{i}^n(A_i \times B_i)}
+$$
+cos\theta = \frac{\sum_{i}^n(A_i \times B_i)}
              {\sqrt{\sum_{i}^n(A_i^2)} \times \sqrt{\sum_{i}^n(B_i^2)}}
-$
+$$
 
-
-
-余弦相似度（Cosine Similarity）
+### 余弦相似度（Cosine Similarity）
 
 定义：两向量越相似，向量夹角越小，cosine绝对值越大；值为负，两向量负相关。
 
