分布式服务框架原理

--- a/back-end/java/fbsfwkjylysj-llf/ch1/1-应用框架演进.md
+++ b/back-end/java/fbsfwkjylysj-llf/ch1/1-应用框架演进.md
@@ -125,3 +125,113 @@
     * 传输层和业务逻辑层分离
     * 服务端有协议注册工厂和序列化注册工厂，可定制私有协议和不同序列化方式
     * 客户端支持同步和异步调用
+* Hessian
+  * 通过Servlet提供远程服务
+  * Spring的DispatcherServlet将匹配模式的请求转发到Hessian服务
+  * 使用动态代理来实现Hessian的远程过程调用
+* gRPC
+  * 基于HTTP/2协议标准而设计
+  * 基于ProtoBuf序列化协议开发
+  * 双向流、流控、头部压缩、单TCP连接复用
+  * 特性
+    * 支持Protobuf
+      * 使用ProtoBuf的IDL（.proto）来定义数据结构和服务
+      * 通过代码生成工具可以自动生成不同语言版本的源代码
+      * 数据结构向前兼容
+      * 支持多语言
+
+### 1.2.4 RPC框架面临的挑战
+
+* 挑战
+  * 服务URL配置管理变得困难：需要服务注册中心，动态注册和发现服务
+  * 负载均衡器的单点压力越来越大：消费者在本地缓存服务提供者列表，实现软负载均衡
+  * 需要分布式消息跟踪系统可视化展示服务调用链，用于依赖分析、业务调用路径梳理
+  * 容量规划问题：采集服务调用KPI数据，进行汇总和分析，通过计算得出服务部署实例数和服务器的配置规格
+  * 服务声明周期管理流程
+  * 服务治理
+
+## 1.3 SOA服务化架构
+
+SOA是一种粗粒度、松耦合的以服务为中心的架构，接口之间通过定义明确的协议和接口进行通信
+
+Service Oriented Architecture面向服务的架构
+
+### 1.3.1 面向服务设计的原则
+
+* SOA面向服务的原则
+  * 服务可服用
+  * 服务共享一个标准契约
+  * 服务松耦合
+  * 服务是底层逻辑的抽象
+  * 服务是可组合、可编排的
+  * 服务是自治的
+  * 服务是无状态的
+  * 服务是可被自动发现的
+
+### 1.3.2 服务治理
+
+* 挑战
+  * 分布式框架下的服务调用性能
+  * 服务化框架如何支持线性扩展
+  * 如何实现高效、实时的服务多维度监控
+  * 大规模分布式环境下的故障快速定界和定位
+  * 分布式环境下海量日志在线检索、模糊查询
+  * 服务的流控、超时控制、服务升降机等管控手段
+  * 服务的划分原则
+* SOA服务治理
+  * 服务定义：对服务进行标识，描述其功能
+  * 服务生命周期管理
+    * 计划阶段：标识新服务
+    * 测试阶段：上线前对服务进行测试
+    * 运行阶段：
+    * 弃用阶段：服务仍在运行，但不会长时间运行
+    * 废弃阶段：生命周期结束
+  * 服务版本治理
+    * 问题修复
+    * 新增功能
+    * 删除非必须功能
+    * 向前兼容
+  * 服务注册中心：支持服务的订阅发布和动态发现机制
+  * 服务监控：调用时延、成功率、吞吐率
+  * 运行期服务质量保障，在不重启服务的前提下达到快速提升服务运行质量
+    * 服务限流
+    * 服务迁入迁出
+    * 服务升降级
+    * 服务权重调整
+    * 服务超时控制
+  * 快速的故障定界定位手段
+    * 日志分析系统
+    * 分布式消息跟踪系统
+  * 服务安全
+    * 通过动态生成令牌（Token）的方式做安全访问授权
+
+## 1.4 微服务架构
+
+微服务架构MSA
+
+### 1.4.1 什么是微服务
+
+* 大多数异构系统并没有使用统一的服务化框架进行深入改造
+  * 通过将业务接口发布成标准的Web服务（SOAP）
+  * 通过企业服务总线（ESB）进行异构协议的转换
+  * Data Mapper和消息路由实现与其他服务互通
+* 产生微服务的原因
+  * 敏捷开发强调迭代开发，快速交付可用的功能
+  * 持续交付促使构建更快、更可靠、更频繁的软件部署和交付能力
+  * CI自动化构建简化环境的创建、编译、大包和部署
+  * DevOps促使小团队独立运作和交付
+* 微服务特征
+  * 原子服务：单一职责原则
+  * 高密度部署
+  * 敏捷交付
+  * 微自治
+
+### 1.4.2 微服务架构对比SOA
+
+* 差异
+  * 服务拆分粒度小：SOA解决异构应用的服务化；微服务强调的是服务拆分尽可能小
+  * 服务依赖：SOA大量的服务间依赖；微服务的设计理念是服务自治，避免依赖其他服务
+  * 服务规模：SOA多服务合并打包；微服务独立性高
+  * 架构差异：企业集成总线ESB（实总线）被P2P的虚拟总线代替
+  * 服务治理：静态治理转型为服务运行态微治理
+  * 敏捷交付：
