2015#李林锋@分布式服务框架原理与实践

--- a/back-end/java/fbsfwkjylysj-llf/ch5/5-协议栈.md
+++ b/back-end/java/fbsfwkjylysj-llf/ch5/5-协议栈.md
@@ -61,4 +61,85 @@
 ### 5.2.5 协议消息的序列化和反序列化
 
 * 消息的序列化分为两部分
-  * 消息头的序列化：定义标志序列化格式的字段，对消息头做通用解码
+  * 消息头的序列化：定义标志序列化格式的字段，对消息头做通用解码，获取序列化格式
+  * 消息头的编码规范
+    * crcCode
+    * length
+    * type
+    * priority
+    * interfaceName
+    * methodName
+    * attachment
+    * body
+
+### 5.2.6 链路创建
+
+* 握手请求消息
+  * 消息头的type字段值为3
+  * 可选附件个数为0
+  * 消息体为空
+* 握手应答消息
+  * 消息头的type字段值为4
+  * 可选附件个数为0
+  * 消息体为byte类型的结果，0：认证成功：-1：认证失败
+
+### 5.2.7 链路关闭
+
+* 关闭连接
+  * 对方宕机或重启
+  * 消息读写过程中发生IO异常
+  * 心跳消息读写过程中发生了IO异常
+  * 心跳超时
+  * 编码异常等不可恢复错误
+
+## 5.3 可靠性设计
+
+### 5.3.1 客户端连接超时
+
+* 客户端连接超时
+  * 不设置超时IO线程长时间阻塞
+  * 业务流程执行时间有限制
+
+### 5.3.2 客户端重连机制
+
+* 重连
+  * 客户端通过链路关闭监听器监听链路状态
+  * 为了保证服务端正常释放句柄资源，首次断连客户端需要等待INTERVAL时间再发起重连
+  * 客户端必须保证自身的资源被及时释放
+  * 重连失败需要打印异常堆栈信息
+  * 客户端对重连次数做限制
+
+### 5.3.3 客户端重复握手保护
+
+* 握手保护
+  * 服务端
+    * 服务端收到请求，对IP进行验证
+    * 验证成功后，在缓存地址表查看是否已登录
+      * 已登录则拒绝，关闭TCP链路，打印失败的握手日志
+  * 客户端
+    * 收到握手失败信息，关闭客户端TCP连接，等待重连
+  * 心跳超时
+    * 服务端连续N次心跳超时后主动关闭链路
+    * 清空该客户端的地址缓存
+
+### 5.3.4 消息缓存重发
+
+* 消息缓存重发
+  * 链路恢复后，重发消息
+  * 消息缓存队列设置上限后，拒绝继续向该队列添加新的消息
+
+### 5.3.5 心跳机制
+
+* 心跳机制
+  * 在网络空闲时采用心跳机制来检测链路的互通性
+  * 一旦发现网络故障，立即关闭链路，主动重连
+
+## 5.4 安全性设计
+
+* 内部长连接采用基于IP地址的安全认证机制
+
+## 5.5 最佳实践——协议的前后兼容性
+
+* 设计原则
+  * 消息头第一个字段中携带协议的版本号，用于标识消息协议版本
+  * 消息头最后一个字段是Map类型的扩展字段，用于服务框架自身或者用户扩展消息头
