--- a/sql/mysql/深入浅出MySQL数据库开发优化与管理维护/ch32/四种事务隔离级别.md
+++ b/sql/mysql/深入浅出MySQL数据库开发优化与管理维护/ch32/四种事务隔离级别.md
@@ -9,9 +9,21 @@
 
 数据库事务的隔离级别有4种，由低到高分别为Read uncommitted 、Read committed 、Repeatable read 、Serializable 。而且，在事务的并发操作中可能会出现`脏读，不可重复读，幻读`。下面通过事例一一阐述它们的概念与联系。
 
+* 4个等级的事务隔离级别
+  * 读未提交READ UNCOMMITED：一个事务可以读取另一个未提交事务的数据
+    * 脏读：一个事务处理读取另一个未提交的事务中的数据。
+  * 读提交READ COMMITTED：一个事务要等另一个事务提交后才能读取数据
+    * 不可重复读：一个事务范围内两个相同的查询却返回了不同数据
+  * 重复读REPEATABLE READ：在开始读取数据（事务开启）时，不再允许修改操作
+    * 幻读问题对应的是插入INSERT操作，而不是UPDATE操作
+    * 幻读和不可重复读都是读取了另一条已经提交的事务
+    * 不可重复读查询的都是同一个数据项，而幻读针对的是一批数据整体
+  * 串行化SERIALIZABLE:事务串行化顺序执行
+
 ## Read uncommitted
 
-* 读未提交，顾名思义，就是一个事务可以读取另一个未提交事务的数据。
+* 读未提交
+  * 一个事务可以读取另一个未提交事务的数据。
 * 事例
   * 老板要给程序员发工资，程序员的工资是3.6万/月。但是发工资时老板不小心按错了数字，按成3.9万/月，该钱已经打到程序员的户口，但是事务还没有提交，就在这时，程序员去查看自己这个月的工资，发现比往常多了3千元，以为涨工资了非常高兴。但是老板及时发现了不对，马上回滚差点就提交了的事务，将数字改成3.6万再提交。
 * 脏读
@@ -20,18 +32,20 @@
 
 ## Read committed
 
-* 读提交，顾名思义，就是一个事务要等另一个事务提交后才能读取数据。
+* 读提交
+  * 一个事务要等另一个事务提交后才能读取数据。
 * 事例
   * 程序员拿着信用卡去享受生活（卡里当然是只有3.6万），当他埋单时（程序员事务开启），收费系统事先检测到他的卡里有3.6万，就在这个时候！！程序员的妻子要把钱全部转出充当家用，并提交。当收费系统准备扣款时，再检测卡里的金额，发现已经没钱了（第二次检测金额当然要等待妻子转出金额事务提交完）。程序员就会很郁闷，明明卡里是有钱的…
 * 分析：这就是读提交，
   * 若有事务对数据进行更新（UPDATE）操作时，
   * 读操作事务要等待这个更新操作事务提交后才能读取数据，可以解决脏读问题
 * 不可重复读
-  * 出现了一个事务范围内两个相同的查询却返回了不同数据
+  * 一个事务范围内两个相同的查询却返回了不同数据
 
 ## Repeatable read
 
-* 重复读，就是在开始读取数据（事务开启）时，不再允许修改操作
+* 重复读
+  * 在开始读取数据（事务开启）时，不再允许修改操作
 * 事例
   * 程序员拿着信用卡去享受生活（卡里当然是只有3.6万），当他埋单时（事务开启，不允许其他事务的UPDATE修改操作），收费系统事先检测到他的卡里有3.6万。这个时候他的妻子不能转出金额了。接下来收费系统就可以扣款了。
 * 分析
@@ -44,6 +58,8 @@
 
 ## Serializable 序列化
 
-Serializable 是最高的事务隔离级别，在该级别下，事务串行化顺序执行，可以避免脏读、不可重复读与幻读。但是这种事务隔离级别效率低下，比较耗数据库性能，一般不使用。
+* Serializable
+  * 事务串行化顺序执行，可以避免脏读、不可重复读与幻读。
+  * 但是这种事务隔离级别效率低下，比较耗数据库性能，一般不使用。
 
 值得一提的是：大多数数据库默认的事务隔离级别是Read committed，比如Sql Server , Oracle。Mysql的默认隔离级别是Repeatable read。
