--- a/back-end/java/netty/Netty实战/ch4/4-传输.md
+++ b/back-end/java/netty/Netty实战/ch4/4-传输.md
@@ -6,3 +6,75 @@
 
 ## 4.1  案例研究：传输迁移
 
+### 4.1.1  不通过Netty使用OIO和NIO
+
+### 4.1.2  通过Netty使用OIO和NIO
+
+### 4.1.3  非阻塞的Netty版本
+
+* Netty
+  * Netty为每种传输的实现都暴露了相同的API
+  * 传输的实现都依赖于Channel、ChannelPipeline和ChannelHandler
+
+## 4.2  传输API
+
+* Channel
+  * ChannelPipeline
+  * ChannelConfig包含该Channel所有配置设置，并支持热更新
+  * 为保证顺序Channel为Comparable的一个子接口
+* ChannelHandler的典型用途
+  * 将数据从一种格式转换为另一种格式
+  * 提供异常的通知
+  * 提供Channel变为活动的或者非活动的通知
+  * 提供当Channel注册到EventLoop或者从EventLoop注销时的通知
+  * 提供有关用户自定义事件的通知
+* ChannelPipeline实现`拦截过滤器`这一设计模式
+* Netty的Channel实现是线程安全的
+
+## 4.3  内置的传输
+
+### 4.3.1  NIO——非阻塞I/O
+
+* 选择器
+  * NIO引入基于选择器的API
+  * 选择器的基本概念时充当一个注册表
+  * 选择器运行在一个检查状态变化并对其作出相应响应的线程上
+  * 在应用程序对状态的改变作出响应之后，选择器重置，并重复整个过程
+* 选择操作的位模式
+  * OP_ACCEPT接受新连接并创建Channel
+  * OP_CONNECT建立连接
+  * OP_READ数据就绪，可从Channel从读取
+  * OP_WRITE发送速度比远程节点处理速度快
+* 零拷贝
+  * 快速高效的将数据从文件系统移动到网络接口
+  * 不需要将其从内核空间复制到用户空间
+
+### 4.3.2  Epoll—用于Linux的本地非阻塞传输
+
+* epoll
+  * 高度可扩展的IO事件通知特性
+  * JDK的实现是水平触发
+  * Netty默认是边沿触发
+
+### 4.3.3  OIO—旧的阻塞I/O
+
+* 阻塞IO
+  * Netty利用SO_TIMEOUT这个Socket标志
+  * 使Netty这样的异步框架支持OIO
+
+### 4.3.4  用于JVM内部通信的Local传输
+
+* Local传输
+  * 同一个JVM中运行的客户端和服务器程序之间的异步通信
+  * 和服务器Channel相关联的SocketAddress并没有绑定物理网络地址
+
+### 4.3.5  Embedded传输
+
+* EmbeddedChannel
+  * 将一组ChannelHandler作为帮助其类嵌入到其他的ChannelHandler内部
+  * 扩展一个ChannelHandler的功能，又不需要修改其内部代码
+
+## 4.4  传输的用例
+
+* SCTP
+  * 流控制传输协议
