--- a/system/linux/jenkins/谈谈持续集成，持续交付，持续部署之间的区别.md
+++ b/system/linux/jenkins/谈谈持续集成，持续交付，持续部署之间的区别.md
@@ -29,13 +29,12 @@
 
 > 编码 -> 构建 -> 集成 -> 测试 -> 交付 -> 部署
 
-正如你在上图中看到，「持续集成（Continuous Integration）」、「持续交付（Continuous Delivery）」和「持续部署（Continuous Deployment）」有着不同的软件自动化交付周期。
+* 持续集成（Continuous Integration）
+* 持续交付（Continuous Delivery）
+* 持续部署（Continuous Deployment）
 
 ## 持续集成
-持续集成是指软件个人研发的部分向软件整体部分交付，频繁进行集成以便更快地发现其中的错误。“持续集成”源自于**极限编程（XP）**，是 XP 最初的 12 种实践之一。
-
-![ci](http://7xsn88.com1.z0.glb.clouddn.com/image/f/82/6ce32afc227588c4b60b143501dcd.png)
-
+持续集成是指软件个人研发的部分向软件整体部分交付，频繁进行集成以便更快地发现其中的错误。
 CI 需要具备这些：
 
 * **全面的自动化测试**。这是实践持续集成&持续部署的基础，同时，选择合适的自动化测试工具也极其重要；
@@ -53,26 +52,12 @@ CI 需要具备这些：
 * 增强开发人员对软件产品的信心，帮助建立更好的工程师文化。
 
 ## 持续集成，该从何入手
-最重要的一环是选择合适的持续集成系统。是搭建私有部署还是选择托管型持续集成系统，关键在于团队运行的基础设施，团队对持续集成系统的资源投入力度。
-
-对比一下私有部署和托管型持续集成系统，或许能帮助你更好地做出选择。
-
-* **Self Hosted CI** 指的是将软件部署在公司的机房或内网中，需要提供多台服务器来完成 CI 系统的运转，同时需要对不同机器之间进行环境配置。比如Maven 或 Gradle 或 Jenkins ，他们的特点是自由开源，且文档支持广泛。优点在于对构建环境有完全的控制权，能够实现完全定制。但需要搭建环境和配置、维护成本高，需要买专门的机器，花费较多人力物力且更新迁移风险高；
-
-* **Hosted CI** 指的是由 SaaS 型的 CI 服务，全程在线进行构建配置，不需要考虑装机器，装软件，环境搭建等成本。常见的有**CircleCI，Codeship 和 TravisCI** 等，SaaS 型的 CI 的特点在于无需额外机器，根据需求动态调度资源几分钟就可以用起来，省时，省心，省力。还有国内最新的持续集成服务——flow.ci ，融入了 workflow 机制的持续集成（CI）服务，除了集成代码、编译、测试之外，还可以集成常用的工具、灵活自定义流程。
-
-整体而言，**Jenkins** 过去一直是大部分公司的选择，但这个现象正在发生改变，随着公有云服务、Docker，SaaS 的普及，越来越多的企业开始选择 Hosted CI，也就是托管型持续集成系统。
-
-另外，在选择合适的持续集成服务时，还需要考量系统的灵活度以适应公司不同阶段的开发测试需求。
-
-选择持续集成系统只是持续集成应用的其中一步，还需要建立合适的持续集成文化比如代码质量管控、测试文化等。做好持续集成，可为持续交付与持续部署打好坚实基础。
+* 私有部署和托管型持续集成系统
+  * **Self Hosted CI** 指的是将软件部署在公司的机房或内网中，需要提供多台服务器来完成 CI 系统的运转，同时需要对不同机器之间进行环境配置。比如Maven 或 Gradle 或 Jenkins ，他们的特点是自由开源，且文档支持广泛。优点在于对构建环境有完全的控制权，能够实现完全定制。但需要搭建环境和配置、维护成本高，需要买专门的机器，花费较多人力物力且更新迁移风险高；
+  * **Hosted CI** 指的是由 SaaS 型的 CI 服务，全程在线进行构建配置，不需要考虑装机器，装软件，环境搭建等成本。常见的有**CircleCI，Codeship 和 TravisCI** 等，SaaS 型的 CI 的特点在于无需额外机器，根据需求动态调度资源几分钟就可以用起来，省时，省心，省力。还有国内最新的持续集成服务——flow.ci ，融入了 workflow 机制的持续集成（CI）服务，除了集成代码、编译、测试之外，还可以集成常用的工具、灵活自定义流程。
 
 ## 持续交付
-持续交付在持续集成的基础上，将集成后的代码部署到更贴近真实运行环境的「类生产环境」（production-like environments）中。持续交付优先于整个产品生命周期的软件部署，建立在高水平自动化持续集成之上。
-
-![ci](http://7xsn88.com1.z0.glb.clouddn.com/image/e/bd/d757dd642e93e33fede310325b155.png)
-
-试想想，如果说等到所有东西都完成了才向下个环节交付，导致所有的问题只能再最后才爆发出来，解决成本巨大甚至无法解决。比如，我们完成单元测试后，可以把代码部署到连接数据库的 **Staging** 环境中进行更多的自动化测试。如果代码没有问题，可以继续手动部署到生产环境中。当然，持续交付并不是指软件每一个改动都要尽快部署到产品环境中，它指的是任何的代码修改都可以在任何时候实施部署。
+持续交付在持续集成的基础上，将集成后的代码部署到更贴近真实运行环境的「类生产环境」
 
 ### 持续交付的好处
 持续交付和持续集成的优点非常相似：
@@ -85,9 +70,7 @@ CI 需要具备这些：
 
 
 ## 持续部署
-持续部署是指当交付的代码通过评审之后，自动部署到生产环境中。持续部署是持续交付的最高阶段。这意味着，所有通过了一系列的自动化测试的改动都将自动部署到生产环境。它也可以被称为**“Continuous Release”**。
-
-![cd](http://7xsn88.com1.z0.glb.clouddn.com/image/0/3a/6b241b45b65eb7d77927619015d84.png)
+持续部署是指当交付的代码通过评审之后，自动部署到生产环境中。
 
 ### 为什么说持续部署是理想的工作流程？
 
