--- a/back-end/Architecture/微服务/微服务架构下，如何打造别具一格的服务治理体验.md
+++ b/back-end/Architecture/微服务/微服务架构下，如何打造别具一格的服务治理体验.md
@@ -44,3 +44,11 @@
     * 业务处理异常(业务数据引起，难以恢复)：数据格式，数据内容缺失，数据一致性等问题，无法切换
   * 基于动态服务编排的切换机制
 * 自动高效重试
+  * 确认失效资源是否“Back Online”
+  * 步骤
+    * 在失效节点上重试
+    * 重试成功，通知注册中心
+    * 多次重试失败，通知注册中心，进行隔离
+* 失效隔离
+  * 失效软隔离（调用隔离）：在服务的可访问性上进行隔离
+  * 失效强隔离（资源隔离）：在服务使用的资源上进行隔离
