从 0 开始的微服务架构

--- a/back-end/Architecture/微服务/Re：从0开始的微服务架构/（四）如何保障微服务架构下的数据一致性.md
+++ b/back-end/Architecture/微服务/Re：从0开始的微服务架构/（四）如何保障微服务架构下的数据一致性.md
@@ -36,5 +36,47 @@
     * BA：Basically Available，基本可用
     * S：Soft State，软状态，状态可以有一段时间不同步
     * E：Eventually Consistent，最终一致，最终数据是一致的就可以了，而不是时刻保持强一致
- * BASE    
+  * BASE模型与ACID不同，满足CAP理论，`通过牺牲一致性来保证系统可用性`
+    * 系统在处理请求的过程中，数据可以存在短时的不一致
+    * 记录每一步的临时状态，根据状态判断是否继续处理请求或者退回原始状态
+* 二阶段提交协议
+  * X/Open DTP（Distributed Transaction Process）是一个分布式事务模型
+  * 此模型主要使用二阶段提交（2PC，Two-Phase-Commit）来保证分布式事务的完整性
+  * 三个角色
+    * AP：Application，应用程序，业务层
+    * RM：Resource Manager，资源管理器
+    * TM： Transaction Manager ，事务管理器
+  * 第一阶段（准备阶段）
+    * TM 通知所有参与事务的各个 RM，给每个 RM 发送 prepare 消息
+    * RM 接收到消息后进入准备阶段后，要么直接返回失败，要么创建并执行本地事务（redo 和 undo 日志）
+    * 但是 不提交（此处只保留最后一步耗时最少的提交操作给第二阶段执行）
+  * 第二阶段（提交 / 回滚阶段）
+    * TM 收到 RM 准备阶段的失败消息或者获取 RM 返回消息超时
+    * 则直接给 RM 发送回滚（rollback）消息，否则发送提交（commit）消息
+    * RM 根据 TM 的指令执行提交或者回滚，执行完成后释放所有事务处理过程中使用的锁（最后阶段释放锁）
+  * 优点
+    * 遵循事务严格的ACID特性
+  * 缺点
+    * 锁定跨越整个提交流程，在高并发和业务模块多的情况下 `对数据库的性能影响较大`
+    * `反可伸缩模式`，业务模块越多，系统可伸缩性越差
+    * 部分存储组件不支持XA协议
+* 可靠消息最终一致性
+  * 利用MQ组件实现
+  * 3个模块
+    * 上游引用，执行业务并发送MQ消息
+    * 可靠消息服务和MQ消息组件，协调上下游消息的传递，并确保上下游数据的一致性
+    * 下游应用，监听MQ的消息并执行自身业务
+  * 2个功能
+    * 消息状态确认
+    * 消息重发
+* TCC（Try-Confirm-Cancel）
+  * 3个模块
+    * 主业务
+    * 从业务
+    * 活动管理器（协作者）
+* 最大努力通知
+  * 三个模块
+    * 上游应用，发消息到 MQ 队列
+    * 下游应用（例如短信服务、邮件服务），接受请求，并返回通知结果
+    * 最大努力通知服务，监听消息队列，将消息存储到数据库中，并按照通知规则调用下游应用的发送通知接口。
   
