--- a/back-end/java/mq/rabbitmq/RabbitMQ实战/ch2/2-理解消息通信.md
+++ b/back-end/java/mq/rabbitmq/RabbitMQ实战/ch2/2-理解消息通信.md
@@ -122,3 +122,74 @@
 * 持续化消息的性能代价
   * 写入磁盘要比存入内存中慢，减少RabbitMQ每秒可处理的消息总数
   * 持久性消息均匀的分布在各个节点而没有冗余
+* 为关键消息使用持久化机制
+* AMQP事务
+  * 如果事务中的首次发布成功了，那么信道会在事务中完成其他AMQP命令
+  * 使用事务会降低消息吞吐量，还会使生产者应用程序产生同步
+* 发送方确认模式
+  * 信道设置成confirm模式，只能通过重新创建信道来关闭该设置
+  * 一旦消息被投递，信道会发送一个发送方确认模式给生产者
+  * 异步的、没有消息回滚的概念
+
+## 2.6　把所有内容结合起来：一条消息的一生
+
+* 安装
+  * python
+  * easy_install, python ez_setup.py
+  * easy_install pika
+* 发布者任务
+  * 连接到RabbitMQ
+  * 获取信道
+  * 声明交换器
+  * 创建消息
+  * 发布消息
+  * 关闭信道
+  * 关闭连接
+
+```py
+#声明消息
+#交换器名称hello-exchange
+#交换器类型direct
+#发送非模式的declare命令
+#持久化交换器，并且不会自动删除
+channel.exchange_declare(exchange="hello-exchange",
+                          type="direct",
+                          passive=False,
+                          durable=True,
+                          auto_delete=False)
+```
+
+* 消费者任务
+  * 连接到RabbitMQ
+  * 获得信道
+  * 声明交换器
+  * 声明队列
+  * 把队列和交换器绑定起来
+  * 消费消息
+  * 关闭信道
+  * 关闭连接
+
+新的内容是如何声明队列，并绑定到交换器上，然后开始消费新消息
+
+```py
+channel.queue_declare(queue="hello-queue")
+channel.queue_bind(queue="hello-queue",
+                    exchange="hello-exchange",
+                    routing_key="hola")
+channel.basic_consume(msg_consumer,
+                      queue="hello-queue",
+                      consumer_tag="hello-consumer")
+```
+
+## 2.7　使用发送方确认模式来确认投递
+
+* 信道
+  * 一条信道只能被单个线程使用，确保信道上发布的消息都是连续的
+  * 任一信道上发布的第一条消息将获得1，并且信道上接下来的每一条消息的ID都将进步1
+  * 同时拥有众多运行的信道，需要为每条信道分别维护一个内部消息ID计数器
+
+```py
+#将信道设置成confirm模式，并用confirm_handler作为回调函数
+channel.confirm_delivery(callback=confirm_handler)
+#当第一次将信道设置为confirm模式时，RabbitMQ会发送一条Confirm.SelectOK类型的确认消息
+```
