--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
@@ -117,6 +117,8 @@
 ### 2.4.2 X轴：项目生命周期和项目阶段
 
 * 项目生命周期
-  * 通常按顺序排序而有时又互相交叉的各项目阶段的集合
+  * 项目生命周期是通常按顺序排序而有时又互相交叉的各`项目阶段`的集合
   * 阶段的名称和数量取决于参与项目的一个或多个项目的管理与控制需要、项目本身的特征及其所在的应用领域
   * 生命周期能为管理项目提供基本框架
+* 产品生命周期
+  * 产品生命周期包含通常顺序排列且`不相互交叉`的一系列产品阶段，项目生命周期的各阶段是`交叉`的
