--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
@@ -122,3 +122,109 @@
   * 生命周期能为管理项目提供基本框架
 * 产品生命周期
   * 产品生命周期包含通常顺序排列且`不相互交叉`的一系列产品阶段，项目生命周期的各阶段是`交叉`的
+  * 项目生命周期包含在一个或多个产品生命周期中
+  * 产品生命周期包括概念、成长、成熟、衰退和退出几个阶段
+  * 产品生命周期中每个阶段的活动都可以作为项目来实施
+  * 一般产品的生命周期要长于项目生命周期
+* 生命周期结构
+  * 启动项目‘
+  * 组织与准备
+  * 执行项目工作
+  * 结束项目
+* 成本与人力投入
+  * 在开始时较低，在工作执行期间达到最高，并在项目快要结束时迅速回落
+* 项目的风险与不确定性
+  * 在项目开始时最大，并在项目的整个生命周期中随时间推移而递减
+  * `风险和不确定性所造成的破坏性的影响在项目后期最大`
+* 干系人对项目的影响力
+  * 改变项目产品最终特性的能力
+  * `在项目开始时最大，并随着项目进展而减弱`
+* `变更和纠正错误的代价在项目接近完成时通常会显著增高`
+* 项目阶段
+  * 为有效完成某些重要的可交付成果，而在需要特别控制的位置将项目分界
+  * 在过程、阶段和项目完成后都可能产生一定的可交付成果
+  * 特征
+    * 当各阶段为顺序排列时，阶段的结束以可交付成果的转移或移交为标志
+      * 这些阶段结束点对项目进行重新评估，或变更、终止项目
+    * 各阶段的工作重点不同，通常涉及不同的组织，需要不同的技能
+    * 需要施加额外的控制，以成功实现各阶段的主要可交付成果或目标
+* 项目阶段的关系
+  * 顺序关系
+    * 一个阶段只能在前一阶段完成后开始
+    * 减少项目的不确定性，无法缩短进度
+  * 交叠关系
+    * 一个阶段在前一阶段完成前就开始
+    * 可用作快速跟进，增加风险
+  * 迭代关系
+    * 一次只规划一个阶段，且下一阶段的规划取决于当前阶段及其阶段成果的进展情况
+    * 适合在快速变化的环境中使用
+* 项目各个阶段最主要的冲突来源
+  * 启动或概念：项目优先级
+  * 开发或规划：项目优先级
+  * 实施或执行：进度
+  * 收尾或结束：进度
+
+### 2.4.3 Y轴：项目管理9大知识领域
+
+* 9大知识领域的层次
+  * 核心知识领域
+    * 范围管理、时间管理、成本管理、质量管理
+  * 资源优化配置
+    * 人力资源管理、采购管理、沟通管理
+  * 防患与未然
+    * 风险管理
+  * 一致性和完整性
+    * 整合管理
+* 9大知识领域的主要活动
+  * 项目整合管理
+    * 整合项目管理各要素
+  * 项目范围管理
+    * 确保项目做且只做成功完成项目所需的所有工作
+  * 项目时间管理
+    * 保证项目按时完成
+  * 项目成本管理
+    * 为了确保项目在批准预算内完成，而对成本进行规划、估算、预算和控制
+  * 项目质量管理
+    * 规划、监督、控制和确保达到项目质量要求
+  * 项目人力资源管理
+    * 规划、组建、建设和管理项目团队
+  * 项目沟通管理
+    * 及时且恰当的生成、收集、发布、存储并最终处置项目信息
+  * 项目风险管理
+    * 识别、分析和控制项目风险
+  * 项目采购管理
+    * 采购或获取产品、服务或成果
+
+### 2.4.4 Z轴：项目管理5大过程组
+
+* 项目管理过程
+  * 过程是产生产品、结果或服务的一系列关联的行为和活动
+  * 过程包括输入、输出和工具
+  * 组织过程资产和事业环境因素一般作为过程的输入
+  * 组织过程资产为“裁剪”组织的过程提供指南和准则
+  * 事业环境因素可能限制项目管理的灵活性
+* 项目团队如何利用过程实现目标
+  * 选择适用的过程实现项目目标
+  * 适用经定义的方法来满足要求
+  * 遵守要求以满足干系人的需要和期望
+  * 平衡6个制约因素间相互竞争的要求，以完成特定的产品、服务或成果
+* 两种项目过程
+  * 项目管理过程
+    * 描述、组织和完成项目的各项工作
+    * 项目管理的过程在大多数时间和大多数项目中应用
+    * 关注对项目活动的描述和组织
+  * 产品导向过程
+    * 具体描述和创造项目产品
+    * 面向产品的过程一般由项目生命周期定义，并随着应用领域的变化而变化
+    * 关注对项目产品的定义和生成
+* 项目阶段与过程组
+  * 时间顺序
+    * 过程组也按照时间的顺序进行，但是过程组间经常有反复，是可逆的
+    * 而项目阶段的时间逻辑更强，而且是不可逆的
+  * 关系
+    * 大型或复杂项目可以分解为不同的阶段或子项目
+    * 每个阶段或子项目通常都要重复所有过程组
+* 解题定位
+  * 判断所属`知识领域`
+  * 判断所属`过程组`
+  * 输入、输出和工具
