--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
@@ -228,3 +228,104 @@
   * 判断所属`知识领域`
   * 判断所属`过程组`
   * 输入、输出和工具
+* 启动过程组的工作
+  * `定义`初步`范围`和落实初步财务资源
+  * `识别`那些将相互作用并影响项目总体结果的内外部`干系人`
+  * `选定项目经理`
+* 5大过程组合PDCA（Plan-Do-Check-Action）环的对应关系
+  * 启动过程组=Start the cycle
+  * 规划过程组=Plan
+  * 实施过程组=Do
+  * 监控过程组=Check and act
+  * 收尾过程组=End the cycle
+* 启动过程组
+  * 定义
+    * 获得授权
+    * 定义一个新项目或现有项目的一个新阶段
+    * 正式开始项目或阶段的一组过程
+  * 工作
+    * 定义初步范围和落实初步财务资源
+    * 识别那些将相互作用并影响项目总体结果的内部、外部干系人
+    * 选定项目经理人
+  * 目的
+    * 保证项目符合其预定的业务需要
+    * 验证成功标准
+    * 审查项目干系人的影响和目标
+    * 决定该项目是否继续、推迟或中止
+  * 让干系人参与启动过程
+  * 授权项目经理
+  * 启动过程组的多种情况
+  * 项目章程
+    * 制定项目章程是制定一份正式批准项目或阶段的文件
+    * `项目章程用于记录干系人的需要和期望的初步要求的过程`
+  * 启动过程组开始的原因
+    * 商业需求
+    * 开始项目的一个新阶段
+    * 项目问题太多需要重新评估商业需求
+* 规划过程组
+  * 定义
+    * 明确项目范围、优化目标及为实现目标而制定行动方案的一组过程
+  * `规划过程组制定项目管理计划和项目文件`
+    * 项目管理计划和项目文件将对项目范围、时间、成本、质量、沟通、风险和采购等各方面做出规定
+    * 变更对项目管理计划和项目文件产生显著影响
+    * 项目文件的更新使既定项目范围下的进度、成本和资源管理更加可靠
+  * 滚动式规划
+    * 项目管理计划的渐进细化，表明项目规划和文档编制是反复进行的持续性过程
+    * 但是不能无止境的优化，要制定规划结束程序
+  * 项目团队应鼓励所有相关干系人参与规划项目、制定项目管理计划和项目文件
+  * 规划过程组的结果是产生项目管理计划，项目计划是重复的、迭代的
+  * 只有风险管理完成了，最终的成本和进度计划才能确定，项目管理计划的滚动更新过程继续执行
+  * 项目进度
+    * `一个详细的项目进度计划只有在完成WBS之后才能完成`
+    * `其他选项都要在详细的项目进度完成后才能完成`
+  * `项目管理的规划过程应该有项目经理负责`
+  * 需要进行规划过程组的原因
+    * 启动过程组已经完成
+    * 批准的纠正和预防措施需要重新计划
+    * 批准的项目变更需要重新计划
+* 执行过程组
+  * 定义
+    * 完成项目管理计划中确定的工作以实现项目目标的一组过程
+  * 工作
+    * 协调人员和资源
+    * 安装项目管理计划整合并实施项目活动
+  * 执行的结果
+    * 更新项目计划和重新确立基准
+    * 执行偏差可能引起变更
+    * 变更请求一旦得到批准，就可能要对项目管理计划或其他项目文件进行修改，甚至还要建立新的基准
+    * 项目的一大部分预算将花费在执行过程组中
+  * 开始执行过程组的原因
+    * 项目计划已经完成
+    * 整合变更管理导致项目管理计划变更
+* 监控过程组
+  * 定义
+    * 跟踪、审查和调整项目进展与绩效
+    * 识别必要的计划变更并启动相应变更的一组过程
+  * 作用
+    * 持续并有规律的观察和测量项目绩效，从而识别与项目管理计划的偏差
+    * 控制变更，并对可能出现的问题推荐预防措施
+    * 对照项目管理计划和项目绩效基准，监督正在进行中的项目活动
+    * 干预那些规避整体变更控制的因素，确保只有经批准的变更才能付诸执行
+    * 监控过程组也可能提出并批准对项目管理计划的更新
+* 收尾过程组
+  * 定义
+    * 完结所有过程组的所有活动以正式结束项目或阶段而实施的一组过程
+  * 意义
+    * 收尾过程组完成时，就表明为完成某一项目或项目阶段所需的所有过程组的所有过程均已完成
+    * 正式确认项目或项目阶段已经结束
+  * 工作
+    * 获得客户或发起人的验收
+    * 进行项目后评价或阶段结束评价
+    * 记录裁剪任何过程的影响
+    * 记录经验教训
+    * 对组织过程资产进行适当更新
+    * 将所有项目文件在项目管理信息系统（PMIS）中归档，以便作为历史数据使用
+    * 结束采购工作
+  * 只有收尾完成了，项目才真正完成了
+  * 收尾的行政活动
+    * 收集和结束完成项目所需要的书面材料
+    * 审查项目产品是可交付成果
+    * 还包括把项目产品交给客户及释放资源
+* 过程间的相互作用
+  * 各过程间需要彼此配合，因而产生相互作用，而相互作用又导致要在项目要求（目标）之间进行权衡
+  * 由于整合的要求，监控过程组与其他诉由过程组相互作用，以启动过程组开始，收尾过程组结束
