--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
@@ -329,3 +329,24 @@
 * 过程间的相互作用
   * 各过程间需要彼此配合，因而产生相互作用，而相互作用又导致要在项目要求（目标）之间进行权衡
   * 由于整合的要求，监控过程组与其他诉由过程组相互作用，以启动过程组开始，收尾过程组结束
+
+
+### 2.4.5 坐标的基础之一：干系人管理
+
+* 冲突和沟通
+  * 由于干系人的期望往往差别很大
+  * 项目经理需要平衡干系人的不同利益，并确保项目团队以专业和合作的方式与干系人打交道
+  * `解决冲突应以对客户有利为原则，但必须是合法的利益`
+* 项目经理对`团队发展`负有最终责任
+  * 执行组织委派项目经理实现项目目标的个人
+  * 项目经理可能想只能经理报告，也可能向项目集或项目组合经理报告
+* 项目经理需要具备的知识
+  * 特定应用领域的技能
+  * 通用管理方面的能力、知识
+  * 实践能力
+  * 个人素质
+* 具体工作
+  * 指定项目管理计划和所有相关的子计划
+  * 使项目始终符合进度和预算要求
+  * 识别、检测和应对风险
+  * 准确、及时的报告项目指标。`项目经理对干系人的沟通负主要责任`
