--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch2/2-项目管理框架.md
@@ -29,7 +29,7 @@
     * 独特性：独特的产品，服务和成果；重复元素的存在，不影响项目的独特本质
     * 不确定性
       * 由项目的独特性决定；需要比 `例行工作` 进行更精心的规划。
-      * 项目可以在所有的组织层次上进行，一个项目可能涉及一个人、一个组织单元或多个组织单元
+      * `项目可以在所有的组织层次上进行`，一个项目可能涉及一个人、一个组织单元或多个组织单元
   * 项目产生的3类结果
     * 产品
     * 能力
@@ -350,3 +350,66 @@
   * 使项目始终符合进度和预算要求
   * 识别、检测和应对风险
   * 准确、及时的报告项目指标。`项目经理对干系人的沟通负主要责任`
+* 发起人
+  * 发起人以现金或其他形式，为项目提供`财务资源`的个人或团体
+  * 在项目获正式批准前，发起人起`领导`作用
+  * 获批后，发起人还对制定`项目初步范围与章程`起重要作用
+  * 超出项目经理控制范围的事项，将向上汇报给发起人
+  * 还参与范围变更审批、阶段末评审，以及当风险很大时继续或不继续的决定
+* 项目管理办公室
+  * PMO是负责对所辖各项目进行集中协调管理的一个组织部门
+  * `PMO的具体形式、职能和结构取决于其所在组织的需求`
+  * 具体职权
+    * 核心干系人和关键决策者的作用
+    * 提出建议、提前中止项目或采取其他必要措施
+    * 参与对共享资源或专用资源的选择、管理和调动
+  * 对项目经理的支持
+    * 整体管理资源和协调项目沟通
+    * 提供指导、辅导、培训和监督
+    * 总结经验教训，推进知识管理
+* 发起人对项目的支持程度取决于他获得的项目信息
+* 项目经理应该定期主动的和重要的干系人保持沟通
+
+### 2.4.6 坐标的基础之二：组织结构
+
+* 组织与文化风格
+  * 文化与风格可能对项目实现目标的能力产生强烈影响
+  * 组织文化是一种事业环境因素
+  * 组织文化的表现形式
+    * 共同的愿景、价值观、行为规范、信念和期望
+    * 政策、方法和程序
+    * 对职权的看法
+    * 工作理论和工作时间
+* 组织结构
+  * 决定从弱矩阵型转到强矩阵型，权力的转移方向是 `职能经理到项目经理`
+
+* 职能型组织
+  * 垂直沟通
+* 矩阵组织
+  * 扩展了组织横向传递信息的能力
+* 项目型组织
+  * 项目经理对于下级没有提拔的权利，只有职能经理对下属有提拔的权利
+  * 优点
+    * 沟通更有效
+    * 决策速度快
+  * 缺点
+    * 设备和职位重复设置
+    * 资源被项目占用，使用效率低
+
+* 影响项目组织机构实施的基本因素
+  * 整合机制
+  * 权力结构
+  * 影响分布
+  * 信息系统
+* 影响项目组织类型选择的基本因素
+  * 项目规模
+  * 项目周期
+  * 项目经验
+  * 项目地点
+  * 可用资源
+  * 其他特征
+* 一个有效的项目组织所要求的4个关键因素
+  * 权限
+  * 职责
+  * 可靠性
+  * 责任心
