--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
@@ -30,3 +30,45 @@
   * 变更控制委员会
 * 结束项目或阶段
   * 行政收尾与合同收尾
+
+## 3.3 本章基本结构框架
+
+### 3.3.1 知识领域分析
+
+### 3.3.2 过程分布和定义
+
+* 制定项目章程
+  * 制定一份正式批准项目或阶段的文件，并记录能反映干系人需要和期望的初步要求的过程
+  * 之前：可行性研究
+* 制定项目管理计划
+  * 对`定义、编制、整合和协调`所有子计划所必须的行动进行记录的过程
+* 指导与管理项目执行
+  * 为实现项目目标而执行项目管理计划中所确定的工作的过程
+* 监控项目工作
+  * `跟踪、审查和调整`项目进展，以实现项目管理计划中确定的绩效目标的过程
+* 实施整体变更控制
+  * 审查所有变更请求，批准变更，管理可交付成果、组织过程资产、项目文件和项目管理计划的变更的过程
+
+#### 整合管理过程关系图
+
+* 项目章程
+  * 制定项目管理计划
+* 项目管理计划
+  * 指导与管理项目执行
+  * 监控项目工作
+  * 实施整体变更控制
+  * 结束项目或阶段
+*                   
+
+|输入|过程|输出|
+|-|-|-|
+|                                          |制定项目章程      |项目章程                                          |
+|项目章程，项目管理计划（更新）               |制定项目管理计划  |项目管理计划                                      |
+|项目管理计划，批准的变更请求                |指导与管理项目执行 |项目管理计划（更新），变更请求，工作绩效，工作绩效信息|
+|项目管理计划                               |监控项目工作      |项目管理计划（更新），变更请求，                    |
+|项目管理计划，变更请求，工作绩效，工作绩效信息|实施整体变更控制  |批准的变更请求
+
+* 制定项目章程
+  * 输入
+  * 输出
+    * 项目章程
