--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
@@ -51,24 +51,49 @@
 
 #### 整合管理过程关系图
 
-* 项目章程
-  * 制定项目管理计划
-* 项目管理计划
-  * 指导与管理项目执行
-  * 监控项目工作
-  * 实施整体变更控制
-  * 结束项目或阶段
-*                   
+## 3.4 制定项目章程过程的重要知识点
 
-|输入|过程|输出|
-|-|-|-|
-|                                          |制定项目章程      |项目章程                                          |
-|项目章程，项目管理计划（更新）               |制定项目管理计划  |项目管理计划                                      |
-|项目管理计划，批准的变更请求                |指导与管理项目执行 |项目管理计划（更新），变更请求，工作绩效，工作绩效信息|
-|项目管理计划                               |监控项目工作      |项目管理计划（更新），变更请求，                    |
-|项目管理计划，变更请求，工作绩效，工作绩效信息|实施整体变更控制  |批准的变更请求
+### 3.4.1 本过程涉及的数据流关系图
 
-* 制定项目章程
-  * 输入
-  * 输出
-    * 项目章程
+### 3.4.2 制定项目章程过程输入
+
+* 制定项目章程输入比较
+  * 项目工作说明书
+  * 合同
+  * 事业环境因素
+  * 组织过程资产
+  * 商业论证
+* 项目工作说明书
+  * 项目工作说明书是对项目所需`交付的产品或服务的叙述性`说明
+  * 内部项目由项目启动者或发起人提供，对于外部项目则由客户提供，可以是招标文件或合同的一部分
+* 工作说明书的内容涉及
+  * 业务需要
+  * 产品范围描述
+  * 组织的战略计划
+* 商业论证
+  * 从商业角度说明项目是否值得投资
+  * 内容通常包含业务需求和成本-效益分析等
+  * 外部项目可以由项目发起组织或客户来撰写
+* 商业论证的角度包括
+  * 市场需求
+  * 组织需要
+  * 客户需求
+  * 技术进步
+  * 法律要求
+  * 生态影响
+  * 社会需要
+* 对于多阶段项目，通过定期审核商业论证，是确定项目必要性的重要依据
+
+### 3.4.3 制定项目章程过程的工具与技术
+
+* 项目选择
+  * 项目选择是对单个或一组项目进行评估，并选择实施对象，从而实现公司目标的过程
+  * 项目选择模型的评估标准
+    * 实用性
+    * 功能性
+    * 灵活性
+    * 易用性
+    * 成本性
+  * 实用性和功能性最为重要
+  * `评估标准是对模型的要求`，而非对项目的要求
+ 
