--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
@@ -86,7 +86,8 @@
 
 ### 3.4.3 制定项目章程过程的工具与技术
 
-* 项目选择
+* 选择项目时，应当将`执行组织的战略计划`视为重要的考虑因素。
+* 项目选择模型
   * 项目选择是对单个或一组项目进行评估，并选择实施对象，从而实现公司目标的过程
   * 项目选择模型的评估标准
     * 实用性
@@ -96,4 +97,41 @@
     * 成本性
   * 实用性和功能性最为重要
   * `评估标准是对模型的要求`，而非对项目的要求
- 
+* 项目选择模型的类型
+  * 非数字模型
+  * 数字模型
+* 非数字模型
+  * 圣牛模型：高层权威人士提议产生
+  * 经营需要模型
+  * 专家意见模型
+  * 比较利益
+    * Q-sort模型：根据相对优点即比较利益进行
+* 数学模型
+  * 利润/赢利能力模型
+    * 根据项目回收期、投资回报率、净现值、内部收益率等指标来判断
+  * 评分模型
+    * 评分标准未加权和评分标准加权两种
+* 所有的项目都应支持组织的战略目标
+* 项目选择的管理问题
+  * 市场份额
+  * 财务收益
+  * 公众看法
+* 项目管理方法论
+  * 项目管理方法论可以是细化和改进后的项目管理标准，也可以不是
+  * 可以是正式成熟的过程，也可以是提高项目管理有效性的非正式技术
+  * `最大的益处在于得到客户的接受和认可` 
+
+### 3.4.4 制定项目章程过程输出
+
+* 项目章程
+  * 项目章程记录业务需要、对客户需求的理解，以及需要交付的新产品、服务或成果
+  * 项目目的或批准项目的原因
+  * 可测量的项目目标和相关的成功标准
+  * 项目的总体要求
+  * 概括性的项目描述
+  * 项目的主要风险
+  * 总体里程碑进度计划
+  * 委派的项目经理及其职责和职权
+  * 发起人或其他批准项目章程的人员的姓名和职权
+
+* 项目章程中涉及的要求、进度计划、预算和风险都是概括性、总体性的，并不是具体的
