--- a/back-end/java/mq/rabbitmq/RabbitMQ实战/ch5/5-集群并处理失败.md
+++ b/back-end/java/mq/rabbitmq/RabbitMQ实战/ch5/5-集群并处理失败.md
@@ -39,3 +39,36 @@
 * 往Rabbit集群添加更多的节点意味着你将拥有更多的节点来传播`队列`，提升性能。
 
 ### 5.2.2 分布交换器
+
+* 交换器
+  * 队列拥有自己的进程
+  * 交换器只是一个名称和一个队列绑定列表
+  * 将消息发布到交换器时
+  * 实际上是由信道将消息上的路由键同交换器的绑定列表进行比较
+  * 信道（channel）按照绑定匹配的结果，将消息路由到队列
+* 集群中的交换器
+  * 交换器只不过是一张查询表
+  * 集群中的每个节点拥有每个交换器的所有信息
+* 避免丢失消息
+  * 当与交换器在集群中完全复制的这一事实相结合时
+  * `事务模式和发送方确认模式`都能确保应用程序一直发布而不丢失一条消息
+
+### 5.2.3 是内存节点还是磁盘节点
+
+* 内存节点将所有的队列、交换器、绑定、用户、权限和vhost的元数据定义都仅存储在内存中
+* 磁盘节点则将元数据存储在磁盘中
+* 单节点系统只运行磁盘类型的节点
+* 集群可以选择配置部分节点为内存节点，加速操作
+
+* 当在集群中声明队列、交换器或者绑定的时候，操作会直到所有集群节点都成功提交元数据变更后才返回
+* RabbitMQ只要求在集群中至少有个磁盘节点。所有其他节点可以是内存节点
+
+* 如果这一磁盘节点崩溃了，集群可以继续路由，但不能做以下操作
+  * 创建队列
+  * 创建交换器
+  * 创建绑定
+  * 添加用户
+  * 更改权限
+  * 添加或删除集群节点
+
+  
