--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
@@ -126,12 +126,35 @@
 * 项目章程
   * 项目章程记录业务需要、对客户需求的理解，以及需要交付的新产品、服务或成果
   * 项目目的或批准项目的原因
-  * 可测量的项目目标和相关的成功标准
+  * `可测量的项目目标和相关的成功标准`
   * 项目的总体要求
   * 概括性的项目描述
   * 项目的主要风险
-  * 总体里程碑进度计划
-  * 委派的项目经理及其职责和职权
+  * `总体里程碑进度计划`
+  * `委派的项目经理及其职责和职权`
   * 发起人或其他批准项目章程的人员的姓名和职权
 
-* 项目章程中涉及的要求、进度计划、预算和风险都是概括性、总体性的，并不是具体的
+* `项目章程中涉及的要求、进度计划、预算和风险都是概括性、总体性的，并不是具体的`
+
+* 项目启动者
+  * 项目由项目以外的人员批准
+  * 项目启动者或发起人应该具有一定的职权，能为项目提供资金
+  * 他们亲自编制项目章程，或授权项目经理代为编制
+  * 项目章程经启动者签字，即标志着项目获得批准
+  * `项目章程的批准，标志着项目的正式启动`
+* 项目经理
+  * 在项目中，应尽早确认并任命项目经理，最好在制定项目章程时就任命，最晚也必须在规划开始之前
+  * 项目经理作为项目的整合管理者，是唯一要负责从全局了解项目并对项目执行情况负全面责任的人
+  * 是项目中最重要的角色
+  * 项目经理的角色：整合者、沟通者、团队领导、决策人、氛围缔造者
+  * 最重要的角色是整合者、协调者和沟通者
+  * 项目经理应该参与制定项目章程
+  * 该章程将`授权项目经理在项目活动中使用组织资源`
+  * 通过编制项目章程，就可以把项目与组织的战略及日常运营工作联系起来
+* 项目章程中包含最初拟定的假设和制约因素
+  * 制约因素指适用于项目，因而影响其绩效的某项限制
+  * 假设
+    * 假设是指就计划而言被视为正确、真实或肯定的因素
+    * 假设影响项目计划的所有方面，是项目逐步完善化的一个组成部分
+    * 项目班子经常识别、记载和证实假设，作为其计划过程的一部分
+  * 项目章程不只在项目整体启动时要用到，而且要在每个项目阶段启动时用到，在项目发生重大变故时也要用到
