--- a/back-end/java/mq/rabbitmq/RabbitMQ实战/ch5/5-集群并处理失败.md
+++ b/back-end/java/mq/rabbitmq/RabbitMQ实战/ch5/5-集群并处理失败.md
@@ -71,4 +71,19 @@
   * 更改权限
   * 添加或删除集群节点
 
+* 在集群中设置两个磁盘节点
+  * 至少有一个是可用的，能在任何时候保存元数据变更
+  * 确保内存节点获知所有的磁盘节点的信息
+  * 内存节点唯一存储到磁盘的元数据信息是集群中磁盘节点的地址
+
+## 5.3 在你的笔记本电脑上设置集群
+
+* 设置集群
+  * 启动rabbitmq-server后，默认使用节点名称rabbit和监听端口号5672
+  * 设置RABBITMQ_NODENAME和RABBITMQ_NODE_PORT环境变量指明节点名称和端口号
+
+* 集群初始化过程
+  * 集群中的第一个节点将初始元数据带入集群中
+  * 第二个和之后的节点将加入它并且获取它的元数据
+  * 加入节点前，首先需要停止Erlang节点上运行的RabbitMQ应用程序，并清空元数据
   
