--- a/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
+++ b/manage/pmp/题解《PMBOK指南》(第四版)张斌/ch3/3-项目整合管理.md
@@ -158,3 +158,7 @@
     * 假设影响项目计划的所有方面，是项目逐步完善化的一个组成部分
     * 项目班子经常识别、记载和证实假设，作为其计划过程的一部分
   * 项目章程不只在项目整体启动时要用到，而且要在每个项目阶段启动时用到，在项目发生重大变故时也要用到
+
+
+## 3.5 制定向管理计划过程的重要知识点
+
