--- a/system/linux/ELK/elasticsearch/@2015#Elasticsearch服务器开发.第2版/7-深入Elasticsearch集群/7.1-节点发现.md
+++ b/system/linux/ELK/elasticsearch/@2015#Elasticsearch服务器开发.第2版/7-深入Elasticsearch集群/7.1-节点发现.md
@@ -2,6 +2,28 @@
 
 # 7.1　节点发现
 
+* 启动一个Elasticsearch节点时，该节点会开始寻找具有相同集群名字并且可见的主节点
+  * 如果找到主节点，该节点加入一个已经组成了的集群
+  * 如果没有找到，该节点成为主节点（如果配置允许）
+* 发现
+  * 形成集群和寻找节点的过程称为发现
+* 发现的目的
+  * 选出一个主节点
+  * 发现集群中的新节点
+
+## 7.1.1　发现的类型
+
+* 多播
+  * 单个传输中`将消息传递到一组计算机`中
+  * Elasticsearch试图找到`所有`能够接收和响应多播消息的节点
+* 单播
+  * 只传输`单条`消息到单个主机
+  * 需要提供集群中的至少一部分主机，节点会尝试连接到它们
+  * 安全
+  * 不想任何节点误加入集群
+  * 运行多个集群
+  * 开发人员的计算机和集群在同一个网络中
+
 
 ## 7.1.2　主节点
 
@@ -10,9 +32,13 @@
   * 主节点接受想加入集群的新节点
   * 主节点跟集群断开连接，其余节点将从中选择一个新的主节点
   * 基于配置自动完成
-
-
-
+* 配置主节点和数据节点
+  * Elasticsearch允许节点同时成为主节点和数据节点
+  * 只保存数据的工作节点
+  * 只处理请求和管理集群的主节点
+  * 默认
+    * node.master: true
+    * node.data: true
 * 脑裂（split-brain）：有两个（或更多）不会互相连接的集群
   * 一个包含10个节点的集群，一天网络出现故障
   * 有三个节点从集群中断开连接，但它们仍然能互相看见对方
