--- a/manage/pmp/试题.md
+++ b/manage/pmp/试题.md
@@ -5,3 +5,9 @@
 http://www.doc88.com/p-9867401704020.html
 * PMP考前强化试题(含答案)_20111208 - 经营企划 - 道客巴巴 
 http://www.doc88.com/p-3807989348501.html
+* pmp历年考题精选_0620_百度文库 
+https://wenku.baidu.com/view/749895bb5901020207409cf0.html
+* PMP考试重点题解析201道题 - 职业资格 - 道客巴巴 
+http://www.doc88.com/p-5793110529574.html
+* https://github.com/hbdhj/documents/tree/master/PMP
+* 20140628PMP真题回顾 - 职业教育 - 道客巴巴 http://www.doc88.com/p-0087414284960.html
