--- a/manage/pmp/试题.md
+++ b/manage/pmp/试题.md
@@ -5,9 +5,31 @@
 http://www.doc88.com/p-9867401704020.html
 * PMP考前强化试题(含答案)_20111208 - 经营企划 - 道客巴巴 
 http://www.doc88.com/p-3807989348501.html
+* PMP项目管理冲刺模拟题2解析_百度文库 
+    https://wenku.baidu.com/view/194ec4ceb90d6c85ed3ac65a.html
 * pmp历年考题精选_0620_百度文库 
 https://wenku.baidu.com/view/749895bb5901020207409cf0.html
+# PMP考前最后113复习题查漏补缺知识点，-考试会有同类型的试题 - 其他考试资料 - 道客巴巴 
+    http://www.doc88.com/p-4117422580903.html
 * PMP考试重点题解析201道题 - 职业资格 - 道客巴巴 
 http://www.doc88.com/p-5793110529574.html
 * https://github.com/hbdhj/documents/tree/master/PMP
-* 20140628PMP真题回顾 - 职业教育 - 道客巴巴 http://www.doc88.com/p-0087414284960.html
+* 20140628PMP真题回顾 - 职业教育 - 道客巴巴 
+http://www.doc88.com/p-0087414284960.html
+* PMP真题2014年整理版含答案 - 产品手册 - 道客巴巴 
+http://www.doc88.com/p-7126853315857.html
+* 团队不能遵循项目技术规范.但是，没有这个问题的正式报告。结果，项目经理_IT知识问答_希赛网 
+http://www.educity.cn/wenda/717913.html
+* PMP考试试题及答案解析汇总_PMP考试_PMP_希赛网 
+http://www.educity.cn/pmp/1775572.html
+* After noticing a conflict within t_IT知识问答_希赛网 
+    http://www.educity.cn/wenda/712754.html
+    强调达成共识 site:www.educity.cn
+* A project team is concerned that e_IT知识问答_希赛网 
+    http://www.educity.cn/wenda/718251.html
+    项目团队担心为保持进度计划将需过渡加班 site:www.educity.cn
+    项目经理应如何创建分发清单 site:www.cnitpm.com
+* PMP 真题试题100题 加入最新2013年03月试题_百度文库 
+    https://wenku.baidu.com/view/df3f11cd770bf78a65295454.html
+* 《2016.9PMP模拟试题一备注版 》.pdf文档全文免费阅读、在线看 
+https://max.book118.com/html/2015/1020/27630678.shtm
