--- a/manage/pmp/7-成本管理.md
+++ b/manage/pmp/7-成本管理.md
@@ -1,7 +1,15 @@
-* PMP试题第七章 项目成本管理-历年试题资料-中培课堂 
+# pmp资格认证考试分类模拟题项目成本管理(五) - 职业资格 - 道客巴巴 
+    http://www.doc88.com/p-7025654352364.html
+# PMP试题第七章 项目成本管理-历年试题资料-中培课堂 
     http://www.zpedu.com/SubjectInfo1457.html
-* * pmp资格认证考试分类模拟题项目成本管理(三) - 职业资格 - 道客巴巴 
+# pmp资格认证考试分类模拟题项目成本管理(三) - 职业资格 - 道客巴巴 
     http://www.doc88.com/p-9867401706748.html
+# 项管备考知识点集锦之项目成本管理考点精讲_信息系统项目管理师_软件水平考试_希赛网 
+    http://www.educity.cn/rk/1777760.html
+# 高级项目经理延续教育课后试题及答案_百度文库 
+    https://wenku.baidu.com/view/ad42f82259fb770bf78a6529647d27284b733743.html
+# 集成备考知识点精讲之项目成本管理考情分析_系统集成项目管理工程师_软件水平考试_希赛网 
+    http://www.educity.cn/rk/1778498.html
 
 * 解析：用德尔菲方法估算一个活动的成本，三个回合后的结果如下表所示（数值表示活动时间），如果每小时的成 - 试题库 - 信管网 http://www.cnitpm.com/pm1/40211.html
 
@@ -17,3 +25,187 @@ D、900
 软题库题目：http://www.ruantiku.com/shiti/1321316618.html 
 德尔菲法要求专家组就某个观点达成一致，应该以最后一轮的结果来计算，一般理解为相对一致，即最后一轮次有几位专家意见一致的数据。20*40=800元 
 信管网参考答案：B 
+
+
+# http://blog.sina.com.cn/s/blog_b725726e0102vhd7.html
+使用项目的应急储备能够将实际成本的S曲线推向哪一个方向？
+A、右
+B、上
+C、下
+D、左
+解析：B。S曲线图也叫香蕉图，参见教材214图7-9。随着项目的进展，成本投入越来越多，尤其是在项目的实施阶段，成本基准=应急储备+项目总成本。此时，当项目到使用应急储备时，香蕉图的走向一定是往上方（因为耗的成本越来越多）。
+
+# http://blog.sina.com.cn/s/blog_9e5332b80102weqd.html
+8.在预算方面，项目经理必须向发起人汇报到目前为止所执行工作的价值。项目经理应该计算什么？
+      A、实际成本
+      B、计划价值
+      C、挣值
+      D、偏差分析
+8.解析：C。挣值就是指项目活动或工作分解结构组成部分的已完成工作的价值。是该部分已完成工作的经批准的预算。EV值的计算必须与PV基准相对应，且 所得的EV值不得大于相应活动或WBS组成部分的PV预算值。本题选择C。偏差分析是把范围、成本和进度的总偏差分解为具体子偏差的一种方法，且把这些子 偏差与影响范围、成本和进度的各种已知因素相关联。这与题干内容无关。
+
+# http://www.docin.com/p-730235849.html
+数量级估算是成本估算的一种形式。这种方法：(D)
+A．当详细信息可获取的情况下采用
+B．在信息量很少的情况下采用
+C．在项目概念化的初始阶段采用
+D．B和C
+
+# http://www.cnshu.cn/qygl/722288.html
+1. 成本预算得到的成本基准与后期项目实际成本又10%左右的偏差，这是正常的。（A  ）
+A: 正确
+B：错误
+解析：正常，因为项目是渐进明细
+2. 以下属于可变成本的是（  A）
+A:原材料
+B:场地租赁
+C:设备费
+D:以上都不是
+答案：A
+解析：因为可变成本是随产品生产数量而增加，包括原材料和人员工资。
+3.项目经理进行项目决策时，需要考虑以下各种成本，除了（D）
+A:间接成本
+B:固定成本
+C:可变成本
+D:沉没成本
+答案：D
+解析：前期费用，决策是否继续做项目时不需要考虑。
+4．一个设备相关的折旧指标是：原值¥50,000，残值¥5,000，使用年限5年，如果采用年数总和折旧法，请问第四年的折旧费用是(B  )
+A: ¥9,000
+B: ¥6,000
+C: ¥42,000
+D: ¥3，000
+答案：B
+解析：第四年=45,000*2/15=6,000。
+5．成本预算与成本绩效基准之间的差额是（ A）
+A:管理储备
+B:应急储备
+C:应付未来的成本
+D:应收未收的收入
+答案：A
+解析：成本预算包括管理储备和成本绩效基准。
+6.项目经理通常有权决定项目预算中的各种类型的开支，除了（D ）
+A：直接成本
+B：固定成本
+C：应急储备
+D：管理储备
+答案：D
+
+
+# https://wenku.baidu.com/view/f2daebdd28ea81c758f57863.html
+6. 下列哪项工作是成本估算的依据？(D) A、总进度表 B、费用基准 C、总费用 D、工作分解结构  
+7. 为了提出有效的项目成本估算，您向完成过类似项目的其他项目经理咨询意(B)
+见，这是什么技术？ A、活动历时估算 B、类比估算 C、自下而上估算 D、建立参数模型  
+8. 一位工程师就一个新进提议的共管项目向管理层提交了一份基于每平方英
+尺的成本得出的项目成本，为了提交这份项目估算成本，该工程师使用了什么工具或技术？ A、类比估算 B、量级估算 C、建立参数模型
+
+# http://www.educity.cn/pmp/168432.html
+17.一位工程师就一个新近提议的共管项目向管理层提交了一份基于每平方英尺的成本得出的项目估算费用。为了提交这份项目估算费用，该工程师使用了什么工具或技术？
+　　A）类比估算。    B）量级估算。
+　　C）建立参数模型，    D）自下而上估算。
+　　18.以下都是估算成本的工具，除了____.
+　　A）储备分析    B）质量成本
+　　C）卖方投标分析    D）成本汇总
+　　19.在进行成本估算时，你必须考虑直接成本、间接成本、一般管理成本和总的管理成本。以下哪一个不是直接成本？
+　　A）项目经理的工资。    B）分包商的费用。
+　　C）项目所用的材料。    D）电费。
+　　20.你提供的项目成本在-10%~+10%的范围内。这是____.
+　　A）你期待在项目的启动阶段期间看到的估算
+　　B）量级估算
+　　C）预算估算
+　　D）你期待在项目的计划编制阶段后期看到的估算
+　　参考答案：
+　　17.答案：C.参数估算是一种运用历史数据和其他变量之间的统计关系来估算诸如成本、预算和持续时间等活动参数。参数估算所采用的方式就是建立参数模型。
+　　18.答案：D.选项A、B、C均为项目估算成本时所运用的工具或技术。
+　　19.答案：D.直接成本是指可以直接归属到具体项目的。间接成本有时也叫一般管理费用，是通过机构的商业运行分配到项目中的。如电费、卫生费、教育附加费等。个别耗电很大的项目电费可能是直接成本，但这种项目在现代社会极为少见。
+　　20.答案：D.当估算的范围在-10%至+10%时，这种估算称为确定的估算。确定的估算是在计划编制阶段后期得到的。预算估算通常在计划编制阶段初期。量级估算通常是在启动阶段生成的。
+
+# PMP计算题公式汇总 
+    http://www.360doc.com/content/16/0701/09/32966471_572114521.shtml
+挣值计算公式：
+
+进度偏差SV: SV = EV - PV（EV代表已完成的工作量，PV代表计划完成的工作量）
+成本偏差CV:CV = EV - AC（EV代表应支出的预算，AC代表实际支出的成本）
+估计完工费用：EAC = BAC/CPI。
+完工尚需费用：ETC = EAC – AC =BAC/CPI – AC = BAC*AC/EV – AC
+进度绩效指数：SPI = EV/PV
+成本绩效指数：CPI = EV/AC
+待完成绩效指数：TCPI=(BAC-EV)/(BAC-AC)
+基于典型的偏差计算：ETC = (BAC - EV) / CPI
+基于非典型的偏差计算：ETC = BAC - EV
+任务完成百分比：PC=EV/BAC
+成本消耗百分比：PS=AC/BAC
+完工偏差：VAC=BAC-EAC
+成本消耗百分比：PS=AC/BAC
+
+EVM期望货币值计算公式：选择项目决策（定量风险分析） EMV=盈利百分比*影响值-风险百分比*影响值
+合同计算公式：
+成本加奖励合同实际支付费用=实际成本 （目标成本-实际成本）*分摊百分比 目标费用*分摊百分比
+
+购买或租赁分析：设备总价 日维护费*X(天数)=租赁费*X
+
+三点估算（PERT——计划评审技术）
+历时期望值估算：T=(O 4M P)/6
+历时标准差估算 Z=(P-O)/6
+
+投资回报周期:NPV计算=每年节省成本*（表格中的信息之和）-初始成本
+
+折旧率计算
+直线折旧=（原值-残值）/预计使用年限
+工作量折旧=（原值-残值）/预计总工作量
+双倍折旧：双倍余额递减法年折旧率＝2×1／估计使用年限×100％
+第一年折旧额（净残值）＝期初固定资产账面余额×双倍直线折旧率
+
+        第二年开始年折旧额 =（原值－净残值）×双倍直线折旧率
+年和法折旧=可使用年数／使用年数和×（固定资产原值－预计残值）
+
+沟通渠道=N（N-1）/2
+挣值计算公式：
+
+进度偏差SV: SV = EV - PV（EV代表已完成的工作量，PV代表计划完成的工作量）
+成本偏差CV:CV = EV - AC（EV代表应支出的预算，AC代表实际支出的成本）
+估计完工费用：EAC = BAC/CPI。
+完工尚需费用：ETC = EAC – AC =BAC/CPI – AC = BAC*AC/EV – AC
+进度绩效指数：SPI = EV/PV
+成本绩效指数：CPI = EV/AC
+待完成绩效指数：TCPI=(BAC-EV)/(BAC-AC)
+基于典型的偏差计算：ETC = (BAC - EV) / CPI
+基于非典型的偏差计算：ETC = BAC - EV
+任务完成百分比：PC=EV/BAC
+成本消耗百分比：PS=AC/BAC
+完工偏差：VAC=BAC-EAC
+成本消耗百分比：PS=AC/BAC
+
+
+EVM期望货币值计算公式：选择项目决策（定量风险分析） EMV=盈利百分比*影响值-风险百分比*影响值
+
+
+合同计算公式：
+
+成本加奖励合同实际支付费用=实际成本 （目标成本-实际成本）*分摊百分比 目标费用*分摊百分比
+购买或租赁分析：设备总价 日维护费*X(天数)=租赁费*X
+三点估算（PERT——计划评审技术）
+历时期望值估算：T=(O 4M P)/6
+历时标准差估算 Z=(P-O)/6
+
+
+投资回报周期:NPV计算=每年节省成本*（表格中的信息之和）-初始成本
+
+
+折旧率计算
+
+直线折旧=（原值-残值）/预计使用年限
+工作量折旧=（原值-残值）/预计总工作量
+
+双倍折旧：双倍余额递减法年折旧率＝2×1／估计使用年限×100％
+
+        第一年折旧额（净残值）＝期初固定资产账面余额×双倍直线折旧率
+
+        第二年开始年折旧额 =（原值－净残值）×双倍直线折旧率
+
+ 
+
+年和法折旧=可使用年数／使用年数和×（固定资产原值－预计残值）
+
+
+沟通渠道=N（N-1）/2
+显示全文
